inventory/k8s.python279.org/addon-yml/kibana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-logging
  namespace: monitoring
  labels:
    k8s-app: kibana-logging
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kibana-logging
  template:
    metadata:
      labels:
        k8s-app: kibana-logging
    spec:
      containers:
      - name: kibana-logging
        image: harbor.python279.org/library/kibana:6.8.15
        resources:
          limits:
            cpu: 1000m
            memory: 1024Mi
          requests:
            cpu: 150m
            memory: 150Mi
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
