inventory/k8s.python279.org/addon-yml/kibana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: logging
    app.kubernetes.io/name: kibana
  name: kibana
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/component: logging
    app.kubernetes.io/name: kibana
  ports:
  - port: 5601
    protocol: TCP
    targetPort: ui
