inventory/k8s.python279.org/addon-yml/kibana/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: logging
    app.kubernetes.io/name: kibana
  name: kibana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: kibana.python279.org
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
